<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/UserAccount">

        <Preference
            android:key="change_password_preference"
            android:title="@string/ResetPassword"
            android:summary="@string/RestP"
            />

        <Preference
            android:key="remove_user_account"
            android:title="@string/RemoveAccount"
            android:summary="@string/Del"

            />
        <Preference
            android:key="remove_user_profil_picture"
            android:title="@string/Removepic"
            android:summary="@string/ClickPIC"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/UserSettings">

        <CheckBoxPreference
            android:key="remind_notification"
            android:title="@string/Remind"
            android:summary="@string/REMIND_BOX"
            />
        <Preference
            android:title="@string/Visit">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://google.com/" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>