<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Activities.ActivitySplash">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="130dp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/CReligion"
        android:textColor="#000"
        android:fontFamily="@font/aaa"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/lay_gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:weightSum="3">


        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/level1"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:background="@drawable/manicon"
            android:layout_weight="1"
           />
        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/level2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/manlevel1"
            android:layout_weight="1"
           />
        <Button
            android:id="@+id/level3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/manlevel3"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/lay_gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/aaa"
            android:text="@string/Traditionalist"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/aaa"
            android:text="@string/religious"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aaa"
        android:gravity="center"
        android:layout_below="@id/lay_gen"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/orthodox"
        android:layout_marginTop="30dp"
        android:layout_weight="1"/>

</LinearLayout>

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_next"
        android:scaleType="center"
        android:layout_margin="40dp"
        android:background="@drawable/myripple_circle"
        />

</RelativeLayout>